// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`custom-src-paths build should create valid app 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/vendors~main-a3090295ce177dd64404.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/main-c038b5fb2b76d489450f.js\\">

  </head>
  <body>
    <div id=\\"app\\"><div>Hello custom src paths</div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4002/vendors~main-a3090295ce177dd64404.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"http://localhost:4002/main-c038b5fb2b76d489450f.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/vendors~main-a3090295ce177dd64404.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/main-c038b5fb2b76d489450f.js\\">

  </head>
  <body>
    <div id=\\"app\\"><div>Hello custom src paths</div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4002/vendors~main-a3090295ce177dd64404.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4002/main-c038b5fb2b76d489450f.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;

exports[`custom-src-paths build should generate the expected files 1`] = `
Object {
  "index.html": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/vendors~main-a3090295ce177dd64404.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"http://localhost:4002/main-c038b5fb2b76d489450f.js\\">

  </head>
  <body>
    <div id=\\"app\\"><div>Hello custom src paths</div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4002/runtime-27f87d9f0d19bf7deb87.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4002/vendors~main-a3090295ce177dd64404.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"http://localhost:4002/main-c038b5fb2b76d489450f.js\\"></script>
  </body>
</html>",
  "main-c038b5fb2b76d489450f.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "runtime-27f87d9f0d19bf7deb87.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
  "vendors~main-a3090295ce177dd64404.js": "CONTENTS IGNORED IN SNAPSHOT TEST",
}
`;

exports[`custom-src-paths start should start a development server 1`] = `
Object {
  "content": "<!DOCTYPE html><html><head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~main.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/main.js\\">

  </head>
  <body>
    <div id=\\"app\\"><div>Hello custom src paths</div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"/runtime.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"/vendors~main.js\\"></script>
<script async=\\"\\" data-chunk=\\"main\\" src=\\"/main.js\\"></script>
  
</body></html>",
  "errors": Array [],
  "sourceHtml": "<!DOCTYPE html>
<html>
  <head>
    <meta charset=\\"UTF-8\\">
    <title>hello-world</title>
    <meta name=\\"viewport\\" content=\\"width=device-width, initial-scale=1\\">
    <link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/runtime.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/vendors~main.js\\">
<link data-chunk=\\"main\\" rel=\\"preload\\" as=\\"script\\" href=\\"/main.js\\">

  </head>
  <body>
    <div id=\\"app\\"><div>Hello custom src paths</div></div>
    <script>window.__LOADABLE_REQUIRED_CHUNKS__ = [];</script>
<script async data-chunk=\\"main\\" src=\\"/runtime.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"/vendors~main.js\\"></script>
<script async data-chunk=\\"main\\" src=\\"/main.js\\"></script>
  </body>
</html>",
  "warnings": Array [],
}
`;
